--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,7 +7,7 @@ build:
     docker: {}
   tagPolicy:
     envTemplate:
-      template: '{{.DOCKER_REGISTRY}}/puja255/softwares:{{.VERSION}}'
+      template: '{{.DOCKER_REGISTRY}}/puja255/bits:{{.VERSION}}'
   local: {}
 deploy:
   kubectl: {}
@@ -18,7 +18,7 @@ profiles:
     - docker: {}
     tagPolicy:
       envTemplate:
-        template: '{{.DOCKER_REGISTRY}}/puja255/softwares:{{.DIGEST_HEX}}'
+        template: '{{.DOCKER_REGISTRY}}/puja255/bits:{{.DIGEST_HEX}}'
     local: {}
   deploy:
     helm:
@@ -26,5 +26,5 @@ profiles:
       - name: softwares
         chartPath: charts/softwares
         setValueTemplates:
-          image.repository: '{{.DOCKER_REGISTRY}}/puja255/softwares'
+          image.repository: '{{.DOCKER_REGISTRY}}/puja255/bits'
           image.tag: '{{.DIGEST_HEX}}'
